test/tasty/neg/src-2/TestPolymorphicFuncs.check
TestPolymorphicFuncs_fail.scala:4: error: Unsupported Scala 3 polymorphic function type: [T](t: T): T in result; found in method id in object tastytest.PolymorphicFuncs.
  def test1 = PolymorphicFuncs.id(23) // error
                               ^
TestPolymorphicFuncs_fail.scala:5: error: Unsupported Scala 3 polymorphic function type: [T](t: T): T in parameter value f; found in method takesId in object tastytest.PolymorphicFuncs.
  def test2 = PolymorphicFuncs.takesId(new PolyFunction{def apply[T](t: T): T = t}) // error
                               ^
TestPolymorphicFuncs_fail.scala:7: error: Unsupported Scala 3 polymorphic function type: [T](t: T): T in bounds of type F; found in class tastytest.PolymorphicFuncs.PolyBox.
    val box = new PolymorphicFuncs.PolyBox[PolyFunction{def apply[T](t: T): T}] // error
                                   ^
3 errors
